# streamlit-dev

./: .gitignore  README.md  comment.md  main.py  pyproject.toml
chapter_01/: 02_basic_chatbot.py  03_basic_histogram.py
chapter_02/in_progress/: password_checker_in_progress_01.py
chapter_03/: Notes.md
chapter_03/in_progress/: backend.py  frontend_in_progress.py
chapter_04/final/: todo_list.py
chapter_04/in_progress/: task.py
chapter_06/final/: date_range_panel.py
chapter_06/in_progress_01/: data_loader.py
chapter_06/in_progress_02/: dashboard.py
chapter_06/in_progress_03/: dashboard.py  filter_panel.py
chapter_06/in_progress_04/: dashboard.py
chapter_06/in_progress_05/: dashboard.py  data_wrangling.py  filter_panel.py
chapter_06/in_progress_07/: dashboard.py
chapter_06/in_progress_08/: dashboard.py  data_wrangling.py  filter_panel.py  metric_bar.py
chapter_06/in_progress_09/: data_loader.py  data_wrangling.py  metric.py  metric_config.py  pie_chart.py
chapter_07/in_progress_01/: filter_panel.py
chapter_07/in_progress_06/: drilldown.py
chapter_07/in_progress_07/: drilldown.py
chapter_07/in_progress_09/: drilldown.py  filter_panel.py
chapter_07/in_progress_10/: dashboard.py
chapter_08/in_progress_01/: main.py
chapter_08/in_progress_06/frontend/: home.py
chapter_08/in_progress_07/: main.py
chapter_09/in_progress_03/: main.py
chapter_09/in_progress_05/: game.py
chapter_09/in_progress_06/: game.py  main.py  settings.py
chapter_10/: graph_example.py
chapter_10/in_progress_01/: bot.py  frontend.py  graph.py
chapter_10/in_progress_02/: bot.py  graph.py
chapter_10/in_progress_03/: bot.py  frontend.py
chapter_10/in_progress_04/: graph.py
chapter_10/in_progress_05/: bot.py  frontend.py  graph.py  prompts.py  vector_store.py
chapter_10/in_progress_06/: bot.py  database.py  graph.py  ingest_to_vector_store.py  tools.py
chapter_12/final/: Dockerfile  README.md
(+2 files in other folders)
