[project]
name = "streamlit-dev"
version = "0.1.0"
description = "This repository is for exploring the Streamlit framework, using the book: Build Python Web Apps with Streamlit."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "db-dtypes>=1.4.3",
    "google-cloud-bigquery>=3.35.1",
    "google-cloud-bigquery-storage>=2.32.0",
    "humanize>=4.12.3",
    "matplotlib>=3.10.5",
    "openai>=1.99.9",
    "pandas>=2.3.1",
    "plotly>=6.3.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "streamlit>=1.48.1",
]
