[project]
name = "streamlit-dev"
version = "0.1.0"
description = "This repository is for exploring the Streamlit framework, using the book: Build Python Web Apps with Streamlit."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.3.0",
    "db-dtypes>=1.4.3",
    "google-cloud-bigquery>=3.35.1",
    "google-cloud-bigquery-storage>=2.32.0",
    "humanize>=4.12.3",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.74",
    "langchain-openai>=0.3.30",
    "langchain-pinecone>=0.2.11",
    "langgraph>=0.6.6",
    "matplotlib>=3.10.5",
    "openai>=1.99.9",
    "pandas>=2.3.1",
    "pinecone>=7.3.0",
    "plotly>=6.3.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.43",
    "streamlit>=1.48.1",
    "toml>=0.10.2",
]
